--- a/panelweb/WebContent/paginas/graficos/linea.xhtml
+++ b/panelweb/WebContent/paginas/graficos/linea.xhtml
@@ -15,17 +15,17 @@
 	<ui:define name="content">
 		<p:outputLabel rendered="#{areaView.codigoDeAplicacion != -38170 }"
 			style="color:green;font-size:15px;font-weight:bold"
-			value="Mensaje de la aplicacion: " />
+			value="Aviso: " />
 		<p:outputLabel rendered="#{areaView.codigoDeAplicacion != -38170 }"
 			style="color:red;font-size:15px;"
 			value="#{areaView.mensajeDeAplicacion}" />
-		<p:panelGrid rendered="#{menuVista.indicador.idIndicador != 0}"
-			style="margin:10px; width:97%;" columns="1">
-			<p:scrollPanel mode="native" style="height:350px;">
-				<p:chart type="line" id="linea2" model="#{lineView.lineModel2}"
-					style="margin:15px; " />
-			</p:scrollPanel>
-		</p:panelGrid>
+		
+		
+
+		<p:chart rendered="#{menuVista.indicador.idIndicador != 0}" type="line" id="linea2" model="#{lineView.lineModel2}"
+				style="margin:15px;width:1800px;" />
+	
+	
 
 
 
