--- a/panelweb/WebContent/paginas/admin/editarIndicador.xhtml
+++ b/panelweb/WebContent/paginas/admin/editarIndicador.xhtml
@@ -20,6 +20,12 @@
 
 		<p:growl id="msgs" />
 		<center>
+			<p:outputLabel  rendered="#{indicadorEditar.codigoDeAplicacion != -38170 }"
+				style="color:red;font-size:15px;font-weight:bold"
+				value="Error de servicio web: " />
+			<p:outputLabel rendered="#{indicadorEdita.codigoDeAplicacion != -38170 }"
+				style="color:red;font-size:15px;" value="#{indicadorNuevo.mensajeDeAplicacion}" />
+		
 			<p:panelGrid style="margin-top:17px;">
 				<f:facet name="header">
 					<p:row>
