--- a/panelweb/WebContent/paginas/admin/nuevoIndicador.xhtml
+++ b/panelweb/WebContent/paginas/admin/nuevoIndicador.xhtml
@@ -11,7 +11,13 @@
 	<ui:define name="overlay"></ui:define>
 
 	<ui:define name="content">
-		<center>
+		<center>	
+			
+			<p:outputLabel  rendered="#{indicadorNuevo.codigoDeAplicacion != -38170 }"
+				style="color:red;font-size:15px;font-weight:bold"
+				value="Error de servicio web: " />
+			<p:outputLabel rendered="#{indicadorNuevo.codigoDeAplicacion != -38170 }"
+				style="color:red;font-size:15px;" value="#{indicadorNuevo.mensajeDeAplicacion}" />
 			<p:panelGrid style="margin-top:17px;">
 				<f:facet name="header">
 					<p:row>
