--- a/panelweb/WebContent/paginas/graficos/barra.xhtml
+++ b/panelweb/WebContent/paginas/graficos/barra.xhtml
@@ -17,11 +17,13 @@
 			value="Aviso: " />
 		<p:outputLabel rendered="#{areaView.codigoDeAplicacion != -38170 }" style="color:green;font-size:15px;font-weight:bold" value="Mensaje de la aplicacion: "/><p:outputLabel rendered="#{areaView.codigoDeAplicacion != -38170 }" style="color:red;font-size:15px;" value="#{areaView.mensajeDeAplicacion}"/>
 		
-	
-		<p:chart rendered="#{menuVista.indicador.idIndicador != 0}" type="bar" id="barra1"
-						model="#{barView.barModel}"
-						style="margin:15px;width:1800px;" />
-			
+		<p:panel>
+			<p:scrollPanel mode="native"  style="height:350px;">
+				<p:chart rendered="#{menuVista.indicador.idIndicador != 0}" type="bar" id="barra1"
+					model="#{barView.barModel}"
+					style="margin:15px;width:1800px;" />
+			</p:scrollPanel>
+		</p:panel>
 			
 		
 			
