correccion de indicadores no existentes

--- a/panelweb/WebContent/paginas/graficos/linea.xhtml
+++ b/panelweb/WebContent/paginas/graficos/linea.xhtml
@@ -13,21 +13,23 @@
 	</ui:define>
 
 	<ui:define name="content">
-		<p:outputLabel rendered="#{areaView.codigoDeAplicacion != -38170 }"
-			style="color:green;font-size:15px;font-weight:bold"
-			value="Aviso: " />
-		<p:outputLabel rendered="#{areaView.codigoDeAplicacion != -38170 }"
-			style="color:red;font-size:15px;"
-			value="#{areaView.mensajeDeAplicacion}" />
-				
-		<p:panel>
-			<p:scrollPanel mode="native"  style="height:350px;">
-				<p:chart rendered="#{menuVista.indicador.idIndicador != 0}" type="line" id="linea2" model="#{lineView.lineModel2}"
-					style="margin:15px;width:1800px;" />
-			</p:scrollPanel>
-		</p:panel>
-	
+		<c:if test="#{menuVista.indicador.idIndicador != 0}">
+			<p:outputLabel
+				rendered="#{areaView.codigoDeAplicacion != -38170 || areaView.codigoDeAplicacion != -0 }"
+				style="color:green;font-size:15px;font-weight:bold" value="Aviso: " />
+			<p:outputLabel rendered="#{areaView.codigoDeAplicacion != -38170 }"
+				style="color:red;font-size:15px;"
+				value="#{areaView.mensajeDeAplicacion}" />
 
+			<p:panel>
+				<p:scrollPanel mode="native" style="height:350px;">
+					<p:chart rendered="#{menuVista.indicador.idIndicador != 0}"
+						type="line" id="linea2" model="#{lineView.lineModel2}"
+						style="margin:15px;width:1800px;" />
+				</p:scrollPanel>
+			</p:panel>
+
+		</c:if>
 
 	</ui:define>
 
