--- a/panelweb/WebContent/paginas/graficos/barra.xhtml
+++ b/panelweb/WebContent/paginas/graficos/barra.xhtml
@@ -12,10 +12,14 @@
 	</ui:define>
 
 	<ui:define name="content" >
+	<c:if test="#{menuVista.indicador.idIndicador != 0}">
 		<p:outputLabel rendered="#{areaView.codigoDeAplicacion != -38170 }"
 			style="color:green;font-size:15px;font-weight:bold"
 			value="Aviso: " />
-		<p:outputLabel rendered="#{areaView.codigoDeAplicacion != -38170 }" style="color:green;font-size:15px;font-weight:bold" value="Mensaje de la aplicacion: "/><p:outputLabel rendered="#{areaView.codigoDeAplicacion != -38170 }" style="color:red;font-size:15px;" value="#{areaView.mensajeDeAplicacion}"/>
+		<p:outputLabel rendered="#{areaView.codigoDeAplicacion != -38170 }" 
+		style="color:green;font-size:15px;font-weight:bold" value="Aviso: "/>
+		<p:outputLabel rendered="#{areaView.codigoDeAplicacion != -38170 }" 
+		style="color:red;font-size:15px;" value="#{areaView.mensajeDeAplicacion}"/>
 		
 		<p:panel>
 			<p:scrollPanel mode="native"  style="height:350px;">
@@ -25,7 +29,7 @@
 			</p:scrollPanel>
 		</p:panel>
 			
-		
+		</c:if>
 			
 	</ui:define>
 
