actualizacion de login

--- a/panelweb/WebContent/paginas/general/login.xhtml
+++ b/panelweb/WebContent/paginas/general/login.xhtml
@@ -26,7 +26,7 @@ body {
 	<h:form id="loginForm" prependId="false">
 		<center>
 			<p:panel id="panelLogin"
-				style=" font-size: 15px; width:400px; border:2 ">
+				style=" font-size: 15px; width:400px;margin-top:10%; border:2 ">
 				<h:outputText
 					style="text-align:center; color:blue; font-size: 25px; font: bold 150% sans-serif;"
 					value="Inicio de sesión" />
