--- a/panelweb/WebContent/paginas/admin/editarIndicador.xhtml
+++ b/panelweb/WebContent/paginas/admin/editarIndicador.xhtml
@@ -23,7 +23,7 @@
 			<p:outputLabel  rendered="#{indicadorEditar.codigoDeAplicacion != -38170 }"
 				style="color:red;font-size:15px;font-weight:bold"
 				value="Error de servicio web: " />
-			<p:outputLabel rendered="#{indicadorEdita.codigoDeAplicacion != -38170 }"
+			<p:outputLabel rendered="#{indicadorEditar.codigoDeAplicacion != -38170 }"
 				style="color:red;font-size:15px;" value="#{indicadorNuevo.mensajeDeAplicacion}" />
 		
 			<p:panelGrid style="margin-top:17px;">
