--- a/panelweb/WebContent/paginas/graficos/linea.xhtml
+++ b/panelweb/WebContent/paginas/graficos/linea.xhtml
@@ -15,7 +15,7 @@
 	<ui:define name="content">
 		<c:if test="#{menuVista.indicador.idIndicador != 0}">
 			<p:outputLabel
-				rendered="#{lineView.codigoDeAplicacion != -38170 || lineView.codigoDeAplicacion != -0 }"
+				rendered="#{lineView.codigoDeAplicacion != -38170}"
 				style="color:green;font-size:15px;font-weight:bold" value="Aviso: " />
 				
 			<p:outputLabel rendered="#{lineView.codigoDeAplicacion != -38170 }"
